--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <h1>Meu portfolio</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum eligendi perspiciatis, quo perferendis voluptate itaque exercitationem, ut dolore quod quibusdam tempore numquam voluptatum molestiae eaque nemo, ad tenetur nobis enim!</p>
 </body>
 </html>
